# wolf3d-engine

./: .gitignore  Block.cpp  Block.h  CBlock.cpp  CBlock.h  CCamera.cpp  CCamera.h  CEntity.cpp  CEntity.h  CGame.cpp  CGame.h  CMakeLists.txt  CMap.cpp  CMap.h  CMapCell.h  CTextures.cpp  CTextures.h  Camera.cpp  Camera.h  Entity.cpp  Entity.h  Game.cpp  Game.h  Map.cpp  Map.h  MapCell.cpp  MapCell.h  Player.cpp  Player.h  Textures.cpp  Textures.h  build.bat  engine.vcxproj  engine.vcxproj.filters  main.cpp  utils.cpp  utils.h
client/: CMakeLists.txt
client/resources/maps/: level_1.txt
client/src/: CCamera.cpp  CCamera.h  CClock.cpp  CClock.h  CEntity.cpp  CEntity.h  CFrameBuffer.cpp  CFrameBuffer.h  CGame.cpp  CGame.h  CTexture.cpp  CTexture.h  CTextures.h  Vector.h  main.cpp
client/src/map/: CBlock.cpp  CBlock.h  CMap.cpp  CMap.h  CMapCell.cpp  CMapCell.h
cmake/: Settings.cmake
maps/: level_1.txt
src/client/: CCamera.cpp  CCamera.h  CEntity.cpp  CGame.cpp  CGame.h  main.cpp
src/client/map/: CMap.h  CMapCell.cpp  CMapCell.h
